[package]
name = "procss"
version = "0.1.18"
edition = "2021"
authors = ["Andrew Stein <andrew@prospective.dev>"]
description = "A simple CSS parsing and transformation framework."
repository = "https://github.com/ProspectiveCo/procss"
license = "Apache-2.0"
keywords = ["compiler", "web", "css"]

[workspace]
members = ["tasks/xtest", "tasks/xbuild", "tasks/utils"]

[lib]
name = "procss"
path = "src/lib.rs"
bench = false

[[bin]]
name = "procss"
path = "src/main.rs"
bench = false

[[bench]]
name = "basic"
harness = false

[features]
iotest = []

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
nom = "7"
anyhow = "1"
base64 = ">=0.22.1"
mockall = "0"

[workspace.dependencies]
grcov = { version = "0.8.13", artifact = "bin" }
once_cell = "1.21.3"
regex = "1.12.3"
wasm-bindgen-cli = { version = "0.2.108", artifact = "bin" }
wasm-opt = "0.116.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.85"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
web-sys = { version = "0.3.85", features = ["console"] }

[profile.release]
lto = true
codegen-units = 1
